--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# User folders
+jupyter/
+/output/**
+!/output/**/
+!/output/**/.gitkeep
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
